--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,10 @@
     }],
     "routes": [
         {
+            "src": "/staticfiles/(.*)",
+            "dest": "/staticfiles/$1"
+        },
+        {
             "src": "/(.*)",
             "dest": "buba/wsgi.py"
         }
